--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGiaDaLenPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGiaDaLenPO.cshtml
@@ -36,7 +36,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in ds_baogia_kinhdoanh_dalenPO">
+                <tr ng-repeat="item in ds_baogia_kinhdoanh_dalenPO"  ng-click="xemchitietbaogia(item.SO_BAO_GIA)">
                     <td>{{item.SO_BAO_GIA}}</td>
                     <td>{{item.NGAY_BAO_GIA | date: 'dd/MM/yyyy'}}</td>
                     <td>{{item.TEN_KHACH_HANG}}</td>
@@ -63,7 +63,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in ds_baogia_kinhdoanh_dangchophanhoi">
+                                <tr ng-repeat="item in ds_baogia_kinhdoanh_dangchophanhoi"  ng-click="xemchitietbaogia(item.SO_BAO_GIA)">
                                     <td>{{item.SO_BAO_GIA}}</td>
                                     <td>{{item.NGAY_BAO_GIA | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -86,7 +86,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in ds_baogia_kinhdoanh_thanhcong">
+                                <tr ng-repeat="item in ds_baogia_kinhdoanh_thanhcong"  ng-click="xemchitietbaogia(item.SO_BAO_GIA)">
                                     <td>{{item.SO_BAO_GIA}}</td>
                                     <td>{{item.NGAY_BAO_GIA | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -109,7 +109,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in ds_baogia_kinhdoanh_dahuy">
+                                <tr ng-repeat="item in ds_baogia_kinhdoanh_dahuy"  ng-click="xemchitietbaogia(item.SO_BAO_GIA)">
                                     <td>{{item.SO_BAO_GIA}}</td>
                                     <td>{{item.NGAY_BAO_GIA | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
