--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGiaThanhCong.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGiaThanhCong.cshtml
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in ds_baogia_kinhdoanh_thanhcong">
+                <tr ng-repeat="item in ds_baogia_kinhdoanh_thanhcong"  ng-click="xemchitietbaogia(item.SO_BAO_GIA)">
                     <td>{{item.SO_BAO_GIA}}</td>
                     <td>{{item.NGAY_BAO_GIA | date: 'dd/MM/yyyy'}}</td>
                     <td>{{item.TEN_KHACH_HANG}}</td>
@@ -65,7 +65,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in ds_baogia_kinhdoanh_dangchophanhoi">
+                                <tr ng-repeat="item in ds_baogia_kinhdoanh_dangchophanhoi"  ng-click="xemchitietbaogia(item.SO_BAO_GIA)">
                                     <td>{{item.SO_BAO_GIA}}</td>
                                     <td>{{item.NGAY_BAO_GIA | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -88,7 +88,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in ds_baogia_kinhdoanh_thanhcong">
+                                <tr ng-repeat="item in ds_baogia_kinhdoanh_thanhcong"  ng-click="xemchitietbaogia(item.SO_BAO_GIA)">
                                     <td>{{item.SO_BAO_GIA}}</td>
                                     <td>{{item.NGAY_BAO_GIA | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -111,7 +111,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in ds_baogia_kinhdoanh_dahuy">
+                                <tr ng-repeat="item in ds_baogia_kinhdoanh_dahuy"  ng-click="xemchitietbaogia(item.SO_BAO_GIA)">
                                     <td>{{item.SO_BAO_GIA}}</td>
                                     <td>{{item.NGAY_BAO_GIA | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
