--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ThemBaoGiaMoi.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ThemBaoGiaMoi.cshtml
@@ -2,10 +2,10 @@
 <script src="~/Content/self-writing/js/Services/BaoGiaService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/BaoGiaCtrl.js"></script>
 
-
 <div ng-app="myApp" ng-controller="baogiaCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
+    <button ng-show="createnewPOvalue" type="button" class="btn btn-primary" style="float:left" ng-click="movetoPrint()"><i class="icon-floppy-disk"></i>Xem chi tiết trước khi in</button>
     <div class="col-md-6">
         <div class="col-md-12 form-group">
             <label class="col-md-2 control-label" for="name">Khách hàng :</label>
@@ -35,18 +35,16 @@
             </div>
         </div>
         <div class="col-md-12 form-group">
-                <label class="col-md-2 control-label">Địa chỉ :</label>
-                <div class="col-md-10">
-                    <p>{{dia_chi_xuat_hoa_don}}</p>
-                </div>
+            <label class="col-md-2 control-label">Địa chỉ :</label>
+            <div class="col-md-10">
+                <p>{{dia_chi_xuat_hoa_don}}</p>
+            </div>
         </div>
-
         <div class="col-md-12 form-group">
-
-                <label class="col-md-3 control-label">SĐT khách hàng:</label>
-                <div class="col-md-9">
-                    <p>{{hotline}}</p>
-                </div>
+            <label class="col-md-3 control-label">SĐT khách hàng:</label>
+            <div class="col-md-9">
+                <p>{{hotline}}</p>
+            </div>
         </div>
     </div>
     <div class="col-md-6">
@@ -84,33 +82,28 @@
             </div>
         </div>
         <div class="col-md-12 form-group">
-                <label class="col-md-3 control-label">Email người liên hệ :</label>
-                <div class="col-md-6">
-                    <p>{{email_ca_nhan}}</p>
-                </div>
+            <label class="col-md-3 control-label">Email người liên hệ :</label>
+            <div class="col-md-6">
+                <p>{{email_ca_nhan}}</p>
+            </div>
         </div>
         <div class="col-md-12 form-group">
-
-                <label class="col-md-3 control-label">Số điện thoại người liên hệ</label>
-                <div class="col-md-6">
-                    <p>{{sdt1}}</p>
-                </div>
+            <label class="col-md-3 control-label">Số điện thoại người liên hệ</label>
+            <div class="col-md-6">
+                <p>{{sdt1}}</p>
+            </div>
         </div>
     </div>
-
 
     <div class="col-md-12" style="text-align: right;margin-bottom: 20px;">
         <label>Hiện bảng tính CM</label>
         <input type="checkbox" ng-model="newCM" />
     </div>
-
     <div class="col-md-12" style="margin-bottom: 20px;">
-        Tiền khách muốn nhận : <input type="text" ng-model="tien_khach_muon_nhan" style="border:1px solid black;" format="number" />
+        Tổng tiền hóa đơn khách muốn ghi : <input type="text" ng-model="tien_khach_muon_nhan" style="border:1px solid black;" format="number" />
         <button ng-click="tinh_cm_khach(tien_khach_muon_nhan)">Tính CM</button>
     </div>
-
     <div class="form-horizontal">
-
         <!--Thông tin chi tiết thêm mới-->
         <div class="col-md-12 content-group" style="padding-left: 5px; padding-right: 5px;">
             <div class="table-responsive">
@@ -187,9 +180,7 @@
                                             <input type="text" ng-model="detail.ma_dieu_chinh" class="col-md-12 style-inline" placeholder="Mã điều chỉnh" style="border:0px">
                                         </td>
                                     </tr>
-
                                 </table>
-
                             </td>
                             <td>
                                 <input type="number" ng-model="detail.so_luong" class="style-inline" ng-change="test(detail)">
@@ -248,10 +239,7 @@
                                     </tr>
                                 </table>
                             </td>
-
                             <td class="text-right"><input type="text" style="text-align:right;" format="number" ng-model="detail.gia_bao_di_net" class="style-inline" readonly></td>
-
-
 
                             <td ng-show="newCM">
                                 <table border='1' style="width:100%; height: 100%; border:none">
@@ -355,31 +343,26 @@
                                         <td style="padding-left:10px"><label class="control-label">Tổng giá trị đơn hàng thực tế: </label></td>
                                         <td colspan='2'><span ng-model="tong_gia_tri_thuc_te_new">{{tong_gia_tri_thuc_te_new | currency: ''}} vnd</span></td>
 
-
                                     </tr>
                                     <tr>
                                         <td style="padding-left:10px"><label class="control-label">Tổng chi phí hóa đơn: </label></td>
                                         <td colspan='2'><span ng-model="tong_chi_phi_hoa_don_new">{{tong_chi_phi_hoa_don_new | currency: ''}}</span> vnd</td>
                                         <td style="padding-left:10px"><label class="control-label">Tổng giá trị đơn hàng theo phiếu xuất/hợp đồng : </label></td>
                                         <td colspan='2'><span ng-model="tong_gia_tri_theo_hop_dong_new">{{tong_gia_tri_theo_hop_dong_new | currency: ''}} vnd</span></td>
-
                                     </tr>
                                     <tr>
                                         <td style="padding-left:10px"><label class="control-label">Thực nhận của khách: </label></td>
                                         <td colspan='2'><span ng-model="tong_khach_nhan_new">{{tong_khach_nhan_new | currency: ''}} vnd</span></td>
                                         <td style="padding-left:10px"><label class="control-label">Thuế VAT : </label></td>
                                         <td colspan='2'><span ng-model="thue_vat_new">{{thue_vat_new | currency: ''}} vnd</span></td>
-
                                     </tr>
                                     <tr>
                                         <td></td>
                                         <td colspan='2'></td>
                                         <td style="padding-left:10px"><label class="control-label">Tổng giá trị thu của khách: </label></td>
                                         <td colspan='2'><span ng-model="tong_gia_tri_thu_cua_khach_new">{{tong_gia_tri_thu_cua_khach_new | currency: ''}} vnd</span></td>
-
                                     </tr>
                                 </table>
-
                             </td>
                             @*<td colspan="9"></td>*@
                         </tr>
@@ -390,24 +373,18 @@
         <!--End thông tin chi tiết thêm mới-->
 
 
-
-
     </div>
     <div style="margin-top: 15px" class="col-md-12">
-        <input class="btn btn-primary" ng-click="CreateNewBaoGiaFromBaoGia()" value="Thêm mới">
+        <input class="btn btn-primary" ng-click="CreateNewBaoGiaFromBaoGia()" value="Lưu">
         <a href="/KinhDoanh/BaoGia/GetBaoGia_THUC/{{BANGBAOGIA.SO_BAO_GIA}}"><input class="btn btn-primary" value="In báo giá"></a>
         <a href="/KinhDoanh/BaoGia/GetBaoGia/{{BANGBAOGIA.SO_BAO_GIA}}"><input class="btn btn-primary" value="In báo giá(CM)"></a>
-        <input ng-show="createnewPOvalue"  class="btn btn-primary" data-toggle="modal" data-target="#thongtinPO" value="Tạo đơn PO">
-
+        <input ng-show="createnewPOvalue" class="btn btn-primary" data-toggle="modal" data-target="#thongtinPO" value="Tạo đơn PO">
     </div>
-
-
 
 
     <div class="modal fade" id="thongtinPO" role="dialog" tabindex="-1">
         <div class="modal-dialog modal-lg" style="width:50%">
             <div class="modal-content" style="border-radius: 15px">
-
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
                     <h4 class="modal-title" id="myModalLabel">Thông tin PO</h4>
@@ -460,14 +437,11 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-
                     <button class="btn btn-default" ng-click="CreatePONewFromBaoGia()" data-dismiss="modal">Lên PO</button>
                     <button class="btn" data-dismiss="modal">Exit</button>
-
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
