--- a/ERP/ERP.Web/Areas/MuaHang/Views/Shared/_Layout.cshtml
+++ b/ERP/ERP.Web/Areas/MuaHang/Views/Shared/_Layout.cshtml
@@ -222,8 +222,8 @@
                             <i class="fa fa-angle-left pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
-                            <li><a href="/MuaHang/HangCanDat/DatHang"><i class="fa fa-angle-double-right"></i> Danh sách đặt mua</a></li>
-                            <li><a href="#"><i class="fa fa-angle-double-right"></i> Đơn mua hàng mới</a></li>
+                            <li><a href="/MuaHang/HangCanDat/DonDatHang"><i class="fa fa-angle-double-right"></i> Danh sách đặt mua</a></li>
+                            <li><a href="/MuaHang/HangCanDat/DatHang"><i class="fa fa-angle-double-right"></i> Đơn mua hàng mới</a></li>
                             <li><a href="#"><i class="fa fa-angle-double-right"></i> Đơn đang về</a></li>
                             <li><a href="#"><i class="fa fa-angle-double-right"></i> Đơn đã về</a></li>
                             <li><a href="#"><i class="fa fa-angle-double-right"></i> Tình trạng đơn hàng</a></li>
