--- a/ERP/ERP.Web/Areas/Marketing/Views/Shared/_Layout.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/Shared/_Layout.cshtml
@@ -214,6 +214,17 @@
                             <i class="fa fa-angle-left pull-right"></i>
                         </a>
                     </li>
+
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-download"></i>
+                            <span>BÁO CÁO KHÁCH HÀNG</span>
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a href="/Marketing/BaoCao_KhachHang/KhachKhongMuaGanDay">Khách không mua gần đây</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
             <!-- /.sidebar -->
