--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DangXuatDo.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DangXuatDo.cshtml
@@ -2,23 +2,7 @@
 <script src="~/Content/self-writing/js/Services/DonHangPOService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/DonHangPOCtrl.js"></script>
 
-<style>
-    .border-td {
-        border: 1px solid black;
-    }
 
-    .table > tbody > tr > td {
-        border-top: 1px solid black;
-    }
-
-    .table > thead > tr > th {
-        border-bottom: 1px solid black;
-    }
-
-    h4 {
-        color: lightskyblue;
-    }
-</style>
 <div ng-app="myApp" ng-controller="DonHangPOCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
@@ -53,7 +37,7 @@
     <div class="col-md-4">
         <table class="table">
             <tr>
-                <td colspan="2" class="border-td"><h4>PO đang chờ duyệt</h4></td>
+                <th colspan="2" class="border-td"><h4>PO đang chờ duyệt</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
@@ -76,7 +60,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="border-td" colspan="2"><h4>PO đã duyệt(chưa lên đơn bán)</h4></td>
+                <tdh class="border-td" colspan="2"><h4>PO đã duyệt(chưa lên đơn bán)</h4></tdh>
             </tr>
             <tr>
                 <td class="border-td">
@@ -99,7 +83,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="border-td" colspan="2"><h4>PO đã lên đơn bán hàng</h4></td>
+                <th class="border-td" colspan="2"><h4>PO đã lên đơn bán hàng</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
