--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGiaThanhCong.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGiaThanhCong.cshtml
@@ -4,23 +4,7 @@
 
 <script src="~/Content/self-writing/js/Services/BaoGiaService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/BaoGiaCtrl.js"></script>
-<style>
-    .border-td {
-        border: 1px solid black;
-    }
 
-    .table > tbody > tr > td {
-        border-top: 1px solid black;
-    }
-
-    .table > thead > tr > th {
-        border-bottom: 1px solid black;
-    }
-
-    h4 {
-        color: lightskyblue;
-    }
-</style>
 <div ng-app="myApp" ng-controller="baogiaCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
@@ -52,7 +36,7 @@
     <div class="col-md-4">
         <table class="table">
             <tr>
-                <td colspan="2" class="border-td"><h4>Báo giá chờ phản hồi</h4></td>
+                <th colspan="2" class="border-td"><h4>Báo giá chờ phản hồi</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
@@ -75,7 +59,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="border-td" colspan="2"><h4>Báo giá thành công</h4></td>
+                <th class="border-td" colspan="2"><h4>Báo giá thành công</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
@@ -98,7 +82,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="border-td" colspan="2"><h4>Báo giá đã hủy</h4></td>
+                <th class="border-td" colspan="2"><h4>Báo giá đã hủy</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
