--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/DonPOHome.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/DonPOHome.cshtml
@@ -6,14 +6,41 @@
 <script src="~/Content/self-writing/js/Controllers/RouteCtrl.js"></script>
 <script src="~/Content/self-writing/js/Services/DonHangPOService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/DonHangPOCtrl.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="~/Content/self-writing/css/Kinhdoanh/donhangPO.css" rel="stylesheet" />
+
+<style>
+    /* Let's get this party started */
+    ::-webkit-scrollbar {
+        width: 5px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background: #00BFFF;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+
+        ::-webkit-scrollbar-thumb:window-inactive {
+            background: #00BFFF;
+        }
+</style>
+<div class="panel-heading">
+    <marquee width="80%">Bạn đang xem danh mục đơn hàng PO</marquee>
+</div>
 <div ng-app="myApp"
      ng-controller="HomeDonPOCtrl"
      layout="column">
-    <md-toolbar>
-        <h2 class="md-toolbar-tools">
-            <span>Bạn đang trong mục Đơn hàng PO</span>
-        </h2>
-    </md-toolbar>
+    
     <md-tabs md-stretch-tabs
              md-selected="selectedIndex">
         <md-tab label="List đơn PO"></md-tab>
