--- a/ERP/ERP.Web/Content/self-writing/css/KhachHang.css
+++ b/ERP/ERP.Web/Content/self-writing/css/KhachHang.css
@@ -678,3 +678,8 @@ cursor: pointer;}
     font-weight: bold;
     padding: 8px;
 }
+.form_addnew {
+    border: 1px solid;
+    border-color: #F0F0F0;
+    width: 400px;
+}
