--- a/ERP/ERP.Web/Views/KhachHang/Index.cshtml
+++ b/ERP/ERP.Web/Views/KhachHang/Index.cshtml
@@ -1213,49 +1213,49 @@ input:-ms-input-placeholder {
                         <form class="form-horizontal" name="myForm" novalidate>
                             <fieldset>
                                 <!-- Form Name -->
-                                <legend>Add New Maker</legend>
+                                <legend>Thêm mới số tài khoản khách hàng</legend>
                                 <!-- Text input-->
                                 <div class="form-group">
-                                    <label class="col-md-2 control-label" for="name">Số tài khoản: </label>
-                                    <div class="col-md-10">
-                                        <input type="text" placeholder="Maker Code" class="form-control input-md" ng-model="so_tai_khoan">
-                                    </div>
-                                </div>
-                                <!-- Text input-->
-                                <div class="form-group">
-                                    <label class="col-md-2 control-label" for="name">Tên tài khoản: </label>
-                                    <div class="col-md-10">
-                                        <input type="text" placeholder="Maker Name" class="form-control input-md" ng-model="ten_tai_khoan">
+                                    <label class="col-md-2 control-label" for="name" style="font-weight: bold">Số tài khoản: </label>
+                                    <div class="col-md-10 form_addnew">
+                                        <input type="text" placeholder="Nhập số tài khoản" class="form-control input-md ng-model="so_tai_khoan">
                                     </div>
                                 </div>
                                 <!-- Text input-->
                                 <div class="form-group">
-                                    <label class="col-md-2 control-label" for="name">Tên ngân hàng : </label>
-                                    <div class="col-md-10">
-                                        <input type="text" placeholder="Maker's Parent Code " class="form-control input-md" ng-model="ten_ngan_hang">
+                                    <label class="col-md-2 control-label" for="name" style="font-weight: bold">Tên tài khoản: </label>
+                                    <div class="col-md-10 form_addnew">
+                                        <input type="text" placeholder="Tên chủ tài khoản" class="form-control input-md" ng-model="ten_tai_khoan">
+                                    </div>
+                                </div>
+                                <!-- Text input-->
+                                <div class="form-group">
+                                    <label class="col-md-2 control-label" for="name" style="font-weight: bold">Tên ngân hàng : </label>
+                                    <div class="col-md-10 form_addnew">
+                                        <input type="text" placeholder="Nhập tên ngân hàng " class="form-control input-md" ng-model="ten_ngan_hang">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-md-2 control-label" for="name">Chi nhánh: </label>
-                                    <div class="col-md-10">
-                                        <input type="text" placeholder="Note" class="form-control input-md" ng-model="chi_nhanh">
+                                    <label class="col-md-2 control-label" for="name" style="font-weight: bold">Chi nhánh: </label>
+                                    <div class="col-md-10 form_addnew">
+                                        <input type="text" placeholder="Tên chi nhánh" class="form-control input-md" ng-model="chi_nhanh">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="col-md-2 control-label" for="name">Tỉnh/Thành phố: </label>
-                                    <div class="col-md-10">
-                                        <input type="text" placeholder="Note" class="form-control input-md" ng-model="tinh_tp">
+                                    <label class="col-md-2 control-label" for="name" style="font-weight: bold">Tỉnh/Thành phố: </label>
+                                    <div class="col-md-10 form_addnew">
+                                        <input type="text" placeholder="Tỉnh/Thành phố:" class="form-control input-md" ng-model="tinh_tp">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="addghichu" class="col-sm-2 control-label">Ghi chú</label>
+                                    <label for="addghichu" class="col-sm-2 control-label" style="font-weight: bold">Ghi chú</label>
                                     <div class="col-sm-10">
-                                        <textarea class="form-control" rows="3" placeholder="Ghi chú" id="addghichu" ng-model="ghi_chu_tk"></textarea>
+                                        <textarea class="form_addnew" rows="3" placeholder="Ghi chú" id="addghichu" ng-model="ghi_chu_tk"></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group" style="margin-top: 50px;">
                                     <label class="col-sm-2 control-label">Loại tài khoản</label>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-3">
                                         <select ng-model="loai_tai_khoan" class="form-control input-md">
                                             <option ng-repeat="loaitaikhoan in list_loaitaikhoan" value="{{loaitaikhoan.MA_LOAI}}">{{loaitaikhoan.TEN_LOAI}}</option>
                                         </select>
