--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/GetBaoGia.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/GetBaoGia.cshtml
@@ -608,5 +608,7 @@
             </table>
         </center>
     </div>
-    <center><button ng-click="printToCart('printSectionId')" class="button">Print</button></center>
+    <button ng-click="printToCart('printSectionId')" class="btn btn-default">In</button>
+    <input type="button" onclick="location.href='/KinhDoanh/BaoGia/BaoGiaHome';" class="btn btn-default" value="Về danh sách" />
+    <button ng-click="moveFromDetailstoEdit()" class="btn btn-default">Sửa</button>
 </div>
