--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGia.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/ListBaoGia.cshtml
@@ -42,7 +42,7 @@
                     <td>{{item.TONG_GIA_TRI_DON_HANG_THUC_TE | currency: '' : 0}}</td>
                     <td>{{item.TEN_NGUOI_BAO_GIA}}</td>
                     <td>
-                        <a href="/KinhDoanh/BaoGia/Index/{{item.MA_DU_KIEN}}">Sửa báo giá</a>
+                        <a href="/KinhDoanh/BaoGia/EditBaoGia/{{item.SO_BAO_GIA}}">Sửa báo giá</a>
                     </td>
                 </tr>
             </tbody>
