--- a/ERP/ERP.Web/Areas/Inventory/Views/ExportExcel/ExportPhieuXuatKho.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/ExportExcel/ExportPhieuXuatKho.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ERP.Web.Models.Database.GetAll_KhachHang_Result>
+﻿@model IEnumerable<ERP.Web.Models.Database.Prod_HH_GetAllHH_Result>
 @*@{
     Layout = null;
 }*@
@@ -15,23 +15,48 @@
     <h1>Export to Excel</h1>
 
      
-    <button export-to-csv>Download</button>
+    @*<button export-to-csv>Demo</button>*@
       <table id="myTable">
 @using (Html.BeginForm("ExportToExcel", "ExportExcel", FormMethod.Post))
 {
+    <tr>
+        <th colspan="4"><input type="submit" value="Export to Excel" class="button" /> </th>
+    </tr>
           <tr>
-              <th>Tiêu đề 1</th>
-              <th>Head2</th>
-              <th>Head3</th>
-              <th>Head4</th>
+              <th>MÃ HÀNG</th>
+              <th>MÃ CHUẨN</th>
+              <th>THÔNG SỐ</th>
+              <th>TÊN HÀNG</th>
+              <th>MÃ NHÓM HÀNG</th>
+              <th>ĐƠN VỊ TÍNH</th>
+              <th>KHỐI LƯỢNG</th>
+              <th>XUẤT XỨ</th>
+              <th>GIÁ NHẬP</th>
+              <th>GIÁ LIST</th>
+              <th>THÔNG SỐ KỸ THUẬT</th>
+              <th>QUY CÁCH ĐÓNG GÓI</th>
+              <th>DISCONTINUE</th>
+              <th>MÃ CHUYỂN ĐỔI</th>
+              <th>GHI CHÚ</th>
           </tr>
           foreach (var item in Model)
           {
             <tr>
-                <td>@item.MA_KHACH_HANG</td>
-                <td>@item.TEN_CONG_TY</td>
-                <td>@item.DIA_CHI_XUAT_HOA_DON</td>
-                <td>@item.HOTLINE</td>
+                <td>@item.MA_HANG</td>
+                <td>@item.MA_CHUAN</td>
+                <td>@item.THONG_SO</td>
+                <td>@item.TEN_HANG</td>
+                <td>@item.MA_NHOM_HANG</td>
+                <td>@item.DON_VI_TINH</td>
+                <td>@item.KHOI_LUONG</td>
+                <td>@item.XUAT_XU</td>
+                <td>@item.GIA_NHAP</td>
+                <td>@item.GIA_LIST</td>
+                <td>@Html.Raw(@item.THONG_SO_KY_THUAT)</td>
+                <td>@item.QUY_CACH_DONG_GOI</td>
+                <td>@item.DISCONTINUE</td>
+                <td>@item.MA_CHUYEN_DOI</td>
+                <td>@item.GHI_CHU</td>
             </tr>
           }
     <tr>
