--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/CheckTonKho/TonCacNoi.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/CheckTonKho/TonCacNoi.cshtml
@@ -82,6 +82,7 @@
 
 
                         <tr height="23" ng-repeat="item in listtonkho">
+
                             <td height="44" class="text-left" style="height:44px;padding-left:3.5px">
                                 <table style="height: 100%; width:100%">
                                     <tr height="23">
@@ -153,7 +154,7 @@
 
                             </td>
                            
-                            @*<td>
+                            <td>
                                 <table style="height: 100%; width:100%" border="0">
                                     <tr height="23">
                                         <td class="text-right">{{item.GIA_LIST_NCC1 | number:0}}</td>
@@ -173,11 +174,11 @@
 
                                 </table>
                                
-                            </td>*@
+                            </td>
                             <td colspan="4">
                                 <table style="height: 100%; width:100%">
                                     <tr  height="23">
-                                        <td class="text-right" style="width:20px;">{{item.GIA_LIST_NCC1 | number:0}}</td>
+                                        @*<td class="text-right" style="width:20px;">{{item.GIA_LIST_NCC1 | number:0}}</td>*@
                                         <td width="10px">
                                             Sup1
                                         </td>
@@ -192,7 +193,7 @@
                                         </td>
                                     </tr>
                                     <tr height="23">
-                                        <td class="text-right">{{item.GIA_LIST_NCC2 | number:0}}</td>
+                                        @*<td class="text-right">{{item.GIA_LIST_NCC2 | number:0}}</td>*@
                                         <td width="10px">
                                             Sup2
                                         </td>
@@ -207,7 +208,7 @@
                                         </td>
                                     </tr>
                                     <tr height="23">
-                                        <td class="text-right">{{item.GIA_LIST_NCC3 | number:0}}</td>
+                                        @*<td class="text-right">{{item.GIA_LIST_NCC3 | number:0}}</td>*@
                                         <td width="10px">
                                             Sup3
                                         </td>
@@ -222,7 +223,7 @@
                                         </td>
                                     </tr>
                                     <tr height="23">
-                                        <td class="text-right">{{item.GIA_LIST_NCC4 | number:0}}</td>
+                                        @*<td class="text-right">{{item.GIA_LIST_NCC4 | number:0}}</td>*@
                                         <td width="10px">
                                             Sup4
                                         </td>
