--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/HangCanXuat/PhieuXuatKho.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/HangCanXuat/PhieuXuatKho.cshtml
@@ -36,6 +36,8 @@
                 <tr height="20" style="border-bottom: 1px solid black;">
                     <td colspan="14" height="40" align="center" rowspan="2" style="height:40px;border: 1px solid black;">
                         <h2>PHIẾU XUẤT KHO</h2>
+                        <br />
+                        (Kiêm phiếu bảo hành)
                     </td>
                 </tr>
                 <tr height="20" style="border-bottom: 1px solid black;"></tr>
