--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/CheckTonKho/TonCacNoi.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/CheckTonKho/TonCacNoi.cshtml
@@ -12,7 +12,10 @@
 <script src="~/Content/self-writing/js/Controllers/YeuCauHoiGiaCtrl.js"></script>
 <script src="~/Content/self-writing/js/Services/TonCacNoiService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/TonCacNoiCtrl.js"></script>
-<div class="panel-heading title">Bạn đang ở mục check tồn kho</div>
+<link href="~/Content/self-writing/css/Kinhdoanh/baogia.css" rel="stylesheet" />
+<div class="panel-heading">
+    <marquee width="80%">Bạn đang xem danh mục check tồn kho</marquee>
+</div>
 <br />
 <div ng-app="myApp"  ng-controller="TonCacNoiCtrl" >
     <div class="content">
