--- a/ERP/ERP.Web/Areas/Inventory/Views/HangSp/Index.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/HangSp/Index.cshtml
@@ -7,7 +7,9 @@
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <link href="~/Content/self-writing/css/HangSpHL.css" rel="stylesheet" />
 
-<div class="panel-heading title">Bạn đang xem danh mục hãng hàng hóa</div>
+<div class="panel-heading">
+    <marquee width="80%">Bạn đang xem danh mục hãng hàng hóa</marquee>
+</div>
 <br />
 <div ng-app="myApp" ng-controller="NhomvthhCtrl">
     <div class="content">
