--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonBanHang/ListDonBanHangChuaXuatKho.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonBanHang/ListDonBanHangChuaXuatKho.cshtml
@@ -3,23 +3,7 @@
 <script src="~/Content/self-writing/js/Services/BanHangService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/BanHangCtrl.js"></script>
 
-<style>
-    .border-td {
-        border: 1px solid black;
-    }
 
-    .table > tbody > tr > td {
-        border-top: 1px solid black;
-    }
-
-    .table > thead > tr > th {
-        border-bottom: 1px solid black;
-    }
-
-    h4 {
-        color: lightskyblue;
-    }
-</style>
 <div ng-app="myApp" ng-controller="BanHangCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
@@ -54,7 +38,7 @@
     <div class="col-md-4">
         <table class="table">
             <tr>
-                <td colspan="2" class="border-td"><h4>Đơn bán hàng chưa xuất kho</h4></td>
+                <th colspan="2" class="border-td"><h4>Đơn bán hàng chưa xuất kho</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
@@ -77,7 +61,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="border-td" colspan="2"><h4>Đơn bán hàng đã xuất kho</h4></td>
+                <th class="border-td" colspan="2"><h4>Đơn bán hàng đã xuất kho</h4></td>
             </tr>
             <tr>
                 <td class="border-td">
