--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DangChoDuyet.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DangChoDuyet.cshtml
@@ -61,7 +61,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="border-td" colspan="2"><h4>PO đã duyệt(chưa lên đơn bán)</h4></td>
+                <th class="border-td" colspan="2"><h4>PO đã duyệt(chưa lên đơn bán)</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
@@ -84,7 +84,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="border-td" colspan="2"><h4>PO đã lên đơn bán hàng</h4></td>
+                <th class="border-td" colspan="2"><h4>PO đã lên đơn bán hàng</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
