--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/EditBaoGia.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/BaoGia/EditBaoGia.cshtml
@@ -47,7 +47,10 @@
         Tổng tiền hóa đơn khách muốn ghi : <input type="text" ng-model="tien_khach_muon_nhan_edit" style="border:1px solid black;" />
         <button ng-click="TinhTongTienHoaDon(tien_khach_muon_nhan_edit)">Tính CM</button>
     </div>
-
+    <div class="col-md-12" style="text-align: right;margin-bottom: 20px;">
+        <label>Hiện bảng tính CM</label>
+        <input type="checkbox" ng-model="editCM" />
+    </div>
     <div class="form-horizontal">
         <!--Chi tiết báo giá của sửa-->
         <div class="col-md-12 content-group" style="padding-left: 5px; padding-right: 5px;">
@@ -66,6 +69,7 @@
                             <td class="text-left" width="10%">Đơn giá tính theo Giá Nhập</td>
                             <td class="text-left" width="9%">Giá báo đi net</td>
                             <td class="text-left" width="20%" ng-show="editCM">Tính CM cho khách</td>
+                            <td>Xóa</td>
                         </tr>
                     </thead>
                     <tbody>
@@ -136,7 +140,7 @@
                                 <input type="text" ng-model="item.DVT" class="style-inline" />
                             </td>
                             <td class="text-left">
-                                <input type="number" style="text-align:right;display:none" ng-model="item.DON_GIA_MOI" ng-pattern="/^[0-9]+(\.[0-9]{1,10})?$/" step="0.01" class="style-inline" ng-change="kiemtra(item)">
+                                <input type="number" style="text-align:right;display:none" ng-model="item.DON_GIA_MOI" ng-pattern="/^[0-9]+(\.[0-9]{1,10})?$/" step="0.01" class="style-inline" ng-change="tinhtien(item)">
                                 <p ng-model="item.DON_GIA_MOI">{{item.DON_GIA_MOI | currency: '' : 0}}</p>
                             </td>
                             <td class="text-left">
@@ -187,7 +191,7 @@
                                 </table>
                             </td>
 
-                            <td class="text-left"><input type="number" style="text-align:right;" ng-model="item.DON_GIA_BAO_DI_NET" class="style-inline" ng-change="tinhtien(item)"></td>
+                            <td class="text-left"><input type="text" style="text-align:right;" ng-model="item.DON_GIA_BAO_DI_NET" format="number"  readonly class="style-inline" ng-change="tinhtien(item)"></td>
 
 
 
@@ -198,13 +202,13 @@
                                             %CM:
                                         </td>
                                         <td class="style-inline">
-                                            <input type="number" ng-model="item.CM" class="col-md-12 style-inline" ng-change="kiemtra(item)">
+                                            <input type="number" ng-model="item.CM" class="col-md-12 style-inline" ng-change="tinhtien(item)">
                                         </td>
                                         <td class="style-inline">
                                             %Thuế:
                                         </td>
                                         <td class="style-inline">
-                                            <input type="number" ng-model="item.THUE_TNDN" ng-init="item.THUE_TNDN=20.00" class="col-md-12 style-inline" ng-change="kiemtra(item)">
+                                            <input type="number" ng-model="item.THUE_TNDN" ng-init="item.THUE_TNDN=20.00" class="col-md-12 style-inline" ng-change="tinhtien(item)">
                                         </td>
                                     </tr>
                                     <tr>
@@ -236,11 +240,11 @@
                                     </tr>
                                 </table>
                             </td>
-                            @*<td>
+                            <td>
                                 <div class="text-left">
                                     <center><i class="fa fa-minus-circle" style="color:red;" ng-click="Remove($index,item)" aria-hidden="true"></i></center>
                                 </div>
-                            </td>*@
+                            </td>
                         </tr>
                         <tr>
                             <td colspan="12" style="text-align:center; cursor:pointer; height:30px; font-size:14px; font-weight:bold;" ng-click="NewEditProduct()">Bấm vào đây để thêm mới</td>
@@ -262,7 +266,7 @@
                                             <label class="control-label">Phí vận chuyển </label>
                                         </td>
                                         <td>
-                                            <input type="number" class="form-control" ng-model="thongtinchung.PHI_VAN_CHUYEN" id="tienvanchuyen"  ng-change="tinhtien(item)" />
+                                            <input type="text" class="form-control" format="number" ng-model="thongtinchung.PHI_VAN_CHUYEN" id="tienvanchuyen"  ng-change="tinhtien(item)" />
                                         </td>
                                         <td>
                                             <label class="control-label">Thuế suất GTGT (%) </label>
