--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/GiuKho/GiuKhoHome.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/GiuKho/GiuKhoHome.cshtml
@@ -5,14 +5,14 @@
 
 <script src="~/Content/self-writing/js/Controllers/RouteCtrl.js"></script>
 <script src="~/Content/self-writing/js/Controllers/GiuHangCtrl.js"></script>
+<link href="~/Content/self-writing/css/Kinhdoanh/hangcangxuat.css" rel="stylesheet" />
+<div class="panel-heading">
+    <marquee width="80%">Bạn đang xem danh mục hàng cần xuất</marquee>
+</div>
 <div ng-app="myApp"
      ng-controller="HomeGiuKhoCtrl"
      layout="column">
-    <md-toolbar>
-        <h2 class="md-toolbar-tools">
-            <span>Bạn đang trong mục Đơn bán hàng</span>
-        </h2>
-    </md-toolbar>
+
     <md-tabs md-stretch-tabs
              md-selected="selectedIndex">
         <md-tab label="Tổng hợp giữ kho"></md-tab>
