--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ThemMoiPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ThemMoiPO.cshtml
@@ -15,7 +15,7 @@
                     <tbody>
                         <tr height="34">
                             <td colspan="7" height="34" style="height:34px;width:100%; text-align: center; font-size: 20px">
-                                <b>ĐƠN ĐẶT HÀNG</b>
+                                <b>Chi tiết đơn hàng</b>
                             </td>
                         </tr>
                         <tr height="21">
@@ -24,7 +24,8 @@
                         <!------------------------------------------>
                         <tr height="21">
                             <td colspan="7">
-                                <table border="0" cellpadding="5" cellspacing="0" style="width:100%;">
+                                <table border="0" cellpadding="5" cellspacing="0" style="width:100%; font-weight: bold;">
+
                                     <tr height="28">
                                         <td height="28" style="height:28px;width:100px;">
                                             Bên mua:
@@ -151,10 +152,10 @@
 
                         <tr height="21">
                             <td colspan="4" height="38" rowspan="2" style="height:38px;width:520px;">
-                                Danh sách đặt hàng
+                                <b>Danh sách đặt hàng:</b>
                             </td>
                             <td colspan="3" rowspan="2" style="width:353px;">
-                                Ngày giao hàng(tháng/ngày/năm): <input type="date" style="height:21px;width:65%;" value="12/05/2016" ng-model="ngay_giao_hang">
+                                <b>Ngày giao hàng(tháng/ngày/năm):</b> <input type="date" style="height:21px;width:60%;" value="12/05/2016" ng-model="ngay_giao_hang">
                             </td>
                         </tr>
                         <tr height="17"></tr>
