--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/HangCanDat/HangCanDatChuaDat.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/HangCanDat/HangCanDatChuaDat.cshtml
@@ -3,23 +3,7 @@
 
 <script src="~/Content/self-writing/js/Services/HangCanDatService.js"></script>
 <script src="~/Content/self-writing/js/Controllers/HangCanDatCtrl.js"></script>
-<style>
-    .border-td {
-        border: 1px solid black;
-    }
 
-    .table > tbody > tr > td {
-        border-top: 1px solid black;
-    }
-
-    .table > thead > tr > th {
-        border-bottom: 1px solid black;
-    }
-
-    h4 {
-        color: lightskyblue;
-    }
-</style>
 <div ng-app="myApp" ng-controller="HangCanDatCtrl" class="content">
     <input type="hidden" value="@Session["USERNAME"]" id="username" />
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
@@ -58,7 +42,7 @@
     <div class="col-md-4">
         <table class="table">
             <tr>
-                <td colspan="2" class="border-td"><h4>Hàng chưa đặt</h4></td>
+                <th colspan="2" class="border-td"><h4>Hàng chưa đặt</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
@@ -81,7 +65,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="border-td" colspan="2"><h4>Hàng đã đặt</h4></td>
+                <th class="border-td" colspan="2"><h4>Hàng đã đặt</h4></th>
             </tr>
             <tr>
                 <td class="border-td">
