--- a/ERP/ERP.Web/Areas/Inventory/Views/XuatKho/XuatKhoBanHang.cshtml
+++ b/ERP/ERP.Web/Areas/Inventory/Views/XuatKho/XuatKhoBanHang.cshtml
@@ -291,7 +291,7 @@
                                                 <th>Mã nhóm hàng</th>
                                                 <th>Xuất xứ</th>
                                                 <th>DVT</th>
-                                                <th>Tên Kho</th>
+                                                <th>Kho giữ</th>
                                                 <th>Số lượng tồn</th>
                                             </tr>
                                         </thead>
