--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/Edit.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/Edit.cshtml
@@ -179,11 +179,10 @@
                     </table>
                 </div>
             </div>
-
         </div>
         <div class="col-md-12" style="text-align:center">
             <button type="button" class="btn btn-default" ng-click="savePO()">Lưu</button>
-            <button type="button" class="btn btn-default" ng-click="AddNew_PhieuBanHang()">Tạo phiếu bán hàng</button>
+            <button type="button" class="btn btn-default" ng-show="daduyetphieu" ng-click="AddNew_PhieuBanHang()">Tạo phiếu bán hàng</button>
         </div>
     </div>
 
