--- a/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/ListPOTongHop.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/ListPOTongHop.cshtml
@@ -42,7 +42,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in list_PO" ng-click="xemchitietPO(item.MA_SO_PO)">
+                <tr ng-repeat="item in list_PO" ng-click="chitietPOMarketing(item.MA_SO_PO)">
                     <td>{{item.MA_SO_PO}}</td>
                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                     <td>{{item.TEN_CONG_TY}}</td>
