--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ChiTietDonPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ChiTietDonPO.cshtml
@@ -1,4 +1,7 @@
 ﻿
+
+
+
 <script src="~/Content/self-writing/js/Controllers/PrintPOCtrl.js"></script>
 
 <div ng-controller="PrintPOCtrl">
@@ -196,7 +199,7 @@
                                         <td style="border-left: 0px !important">&nbsp;</td>
                                     </tr>
 
-                                    <tr height="30">                                          
+                                    <tr height="30">
                                         <td align="center" colspan="6" style="border-left: none;font-weight:bold">
                                             Tổng cộng
                                         </td>
@@ -207,7 +210,7 @@
                                     </tr>
                                     <tr height="30">
                                         <td align="center" colspan="8" style="border-left: none;font-weight:bold">
-                                            Bằng chữ :{{thongtinchung.SO_TIEN_VIET_BANG_CHU}}
+                                            Bằng chữ :{{thongtinchung.SO_TIEN_VIET_BANG_CHU}} đồng
                                         </td>
                                     </tr>
 
@@ -259,7 +262,7 @@
                                     </tr>
                                     <tr height="20">
                                         <td colspan="12">
-                                           &nbsp;
+                                            &nbsp;
                                         </td>
                                     </tr>
                                     <tr height="20">
@@ -291,12 +294,9 @@
                             </table>
                         </td>
                     </tr>
-
-
             </table>
         </center>
     </div>
-    <button ng-click="printToCart('printSectionId')" class="button">In PDF</button>
-    <button ng-click="BackToList()" class="button">Về danh sách</button>
-    <button ng-click="BackToEdit()" class="button">Sửa</button>
 </div>
+
+
