--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO.cshtml
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in list_PO"  ng-click="redirect(item.MA_SO_PO)">
+                <tr ng-repeat="item in list_PO"  ng-click="xemchitietPO(item.MA_SO_PO)">
                     <td>{{item.MA_SO_PO}}</td>
                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                     <td>{{item.TEN_CONG_TY}}</td>
@@ -72,7 +72,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_DangChoDuyet">
+                                <tr ng-repeat="item in list_PO_DangChoDuyet"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -95,7 +95,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_ChuaLenDonBan">
+                                <tr ng-repeat="item in list_PO_ChuaLenDonBan"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -118,7 +118,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_DaLenDonBanHang">
+                                <tr ng-repeat="item in list_PO_DaLenDonBanHang"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
