--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DaDuyet.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DaDuyet.cshtml
@@ -55,7 +55,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_DangChoDuyet">
+                                <tr ng-repeat="item in list_PO_DangChoDuyet"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -78,7 +78,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_ChuaLenDonBan">
+                                <tr ng-repeat="item in list_PO_ChuaLenDonBan"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -101,7 +101,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_DaLenDonBanHang">
+                                <tr ng-repeat="item in list_PO_DaLenDonBanHang"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
