--- a/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DangXuatDo.cshtml
+++ b/ERP/ERP.Web/Areas/KinhDoanh/Views/DonHangPO/ListPO_DangXuatDo.cshtml
@@ -50,7 +50,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_DangChoDuyet">
+                                <tr ng-repeat="item in list_PO_DangChoDuyet"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -73,7 +73,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_ChuaLenDonBan">
+                                <tr ng-repeat="item in list_PO_ChuaLenDonBan"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
@@ -96,7 +96,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="item in list_PO_DaLenDonBanHang">
+                                <tr ng-repeat="item in list_PO_DaLenDonBanHang"  ng-click="xemchitietPO(item.MA_SO_PO)">
                                     <td>{{item.MA_SO_PO}}</td>
                                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                                 </tr>
