--- a/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/PODaDuyet.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/KyDuyetPO/PODaDuyet.cshtml
@@ -39,7 +39,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in list_PO_DaDuyet" ng-click="xemchitietPO(item.MA_SO_PO)">
+                <tr ng-repeat="item in list_PO_DaDuyet" ng-click="chitietPOMarketing(item.MA_SO_PO)">
                     <td>{{item.MA_SO_PO}}</td>
                     <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
                     <td>{{item.TEN_CONG_TY}}</td>
@@ -55,80 +55,6 @@
             </tbody>
         </table>
     </div>
-    @*<div class="col-md-4">
-        <table class="table">
-            <tr>
-                <td colspan="2" class="border-td"><h4>PO đang chờ duyệt</h4></td>
-            </tr>
-            <tr>
-                <td class="border-td">
-                    <div style="height: 400px;overflow:auto">
-                        <table class="table right-table">
-                            <thead>
-                                <tr>
-                                    <th>Mã số PO</th>
-                                    <th>Ngày lên PO</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="item in list_PO_DangChoDuyet">
-                                    <td>{{item.MA_SO_PO}}</td>
-                                    <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td class="border-td" colspan="2"><h4>PO đã duyệt(chưa lên đơn bán)</h4></td>
-            </tr>
-            <tr>
-                <td class="border-td">
-                    <div style="height: 400px;overflow:auto">
-                        <table class="table right-table">
-                            <thead>
-                                <tr>
-                                    <th>Mã số PO</th>
-                                    <th>Ngày lên PO</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="item in list_PO_ChuaLenDonBan">
-                                    <td>{{item.MA_SO_PO}}</td>
-                                    <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td class="border-td" colspan="2"><h4>PO đã lên đơn bán hàng</h4></td>
-            </tr>
-            <tr>
-                <td class="border-td">
-                    <div style="height: 400px;overflow:auto">
-                        <table class="table right-table">
-                            <thead>
-                                <tr>
-                                    <th>Mã số PO</th>
-                                    <th>Ngày lên PO</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="item in list_PO_DaLenDonBanHang">
-                                    <td>{{item.MA_SO_PO}}</td>
-                                    <td>{{item.NGAY_LEN_PO | date: 'dd/MM/yyyy'}}</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </td>
-            </tr>
-        </table>
-
-    </div>*@
 </div>
 
 
