--- a/ERP/ERP.Web/Views/KhachHang/Index.cshtml
+++ b/ERP/ERP.Web/Views/KhachHang/Index.cshtml
@@ -163,8 +163,8 @@ input:-ms-input-placeholder {
             <button type="button" class="button_khachhang fa fa-stack-overflow" ng-show="isadmin" onclick="location.href='/ChuyenSale/Index';">Chuyển sales</button>
             <button type="button" class="button_khachhang fa fa-search-plus" ng-show="isadmin" onclick="location.href = '/KhachHang/TimKiem_KhachHang';">Tìm kiếm khách trên toàn hệ thống</button>
             <button type="button" class="button_khachhang fa fa-user-o" ng-show="isadmin" onclick="location.href = '/KhachHang/KhachChuaGiaoDich';">Danh sách khách chưa có giao dịch</button>
-            <button type="button" class="button_khachhang fa fa-wrench" ng-show="isadmin"<a href="/KhachHang/Import_KhachHang">Update thông tin khách hàng loạt</a></button>
-                <button type="button" class="button_khachhang btn-info" value="Hủy lọc" ng-show="huyloc" style="float:right" ng-click="cancel_locKH()" />
+            <button type="button" class="button_khachhang fa fa-wrench" ng-show="isadmin"><a href="/KhachHang/Import_KhachHang">Update thông tin khách hàng loạt</a></button>
+                <button type="button" class="button_khachhang btn-info" ng-show="huyloc" style="float:right" ng-click="cancel_locKH()">Hủy lọc</button>
 </div>
 
         <!-- Modal Add New khách hàng -->
@@ -251,7 +251,7 @@ input:-ms-input-placeholder {
                                     <td><label class="control-label">Điều khoản TT</label></td>
                                     <td><select ng-model="arraythongtin.dieu_khoan_thanh_toan" id="adddieukhoanthanhtoan" style="height: 100%;padding-left: 5px;width:100%" data-ng-options="item as item for item in dieukhoantt"></select></td>
                                     <td><input type="number" placeholder="Số ngày được nợ" id="addsongayduocno" ng-model="arraythongtin.so_ngay_duoc_no" style="height: 100%;padding-left: 5px;"></td>
-                                    <td><input type="number" placeholder="Số nợ tối đa" id="addsonotoida" ng-model="arraythongtin.so_no_toi_da" style="height: 100%;padding-left: 5px;"></td>
+                                    <td><input type="text" format="number" placeholder="Số nợ tối đa" id="addsonotoida" ng-model="arraythongtin.so_no_toi_da" style="height: 100%;padding-left: 5px;"></td>
                                     <td></td>
                                     <td></td>
                                     <td></td>
@@ -472,6 +472,12 @@ input:-ms-input-placeholder {
                                     <td class="text-left"><input type="number" class="form-control" id="addsongayduocno" ng-model="kh.SO_NGAY_DUOC_NO"></td>
                                     <td class="text-left-edit"><label for="addsonotoida" class="control-label">Số nợ tối đa</label></td>
                                     <td class="text-left"><input type="number" class="form-control" id="addsonotoida" ng-model="kh.SO_NO_TOI_DA"></td>
+                                </tr>
+                                <tr>
+                                    <td class="text-left-edit"><label class="control-label">Tỉnh</label></td>
+                                    <td class="text-left"><input type="text" class="form-control" ng-model="kh.TINH"/></td>
+                                    <td class="text-left-edit"><label for="addsongayduocno" class="control-label">Quốc gia</label></td>
+                                    <td class="text-left"><input type="text" class="form-control" ng-model="kh.QUOC_GIA"></td>
                                 </tr>
                                 <tr>
                                     <td class="text-left-edit"><label class="control-label">Đánh giá</label></td>
